--- a/PlayApp/Templates/PlayApp/T01-view.html
+++ b/PlayApp/Templates/PlayApp/T01-view.html
@@ -18,7 +18,6 @@
         <link href="{% static 'PlayApp/css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
-        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'Inicio' %}">Inicio</a>
@@ -33,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Sobre Nosotros' %}">Sobre Nosotros</a></li>
                         {% if request.user.is_authenticated %}
                             {%  if request.user.avatar %}
-                                <img src="{{ request.user.avatar.url }}" style="display: block;width: 40px;height: 40px;margin: auto;border-radius:20%" class="card-img">
+                                <img src="{{ request.user.avatar }}" style="display: block;width: 40px;height: 40px;margin: auto;border-radius:20%" class="card-img">
                             {% else%}
                                 <img src="{% static 'PlayApp/assets/img/avatar-default.png' %}" style="display: block;width: 40px;height: 40px;margin: auto; border-radius:20%;" class="card-img">
                             {% endif %}
