--- a/PlayApp/Templates/PlayApp/T01-view.html
+++ b/PlayApp/Templates/PlayApp/T01-view.html
@@ -9,12 +9,9 @@
         <meta name="author" content="" />
         <title>Noti Blog</title>
         <link rel="icon" type="image/x-icon" href="{% static 'PlayApp/assets/favicon.ico' %}" />
-        <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'PlayApp/css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
@@ -27,12 +24,11 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
-                        <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Usuario Form' %}">Crear Usuario</a></li> -->
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Publicaciones' %}">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'Sobre Nosotros' %}">Sobre Nosotros</a></li>
                         {% if request.user.is_authenticated %}
                             {%  if request.user.avatar %}
-                                <img src="{{ request.user.avatar }}" style="display: block;width: 40px;height: 40px;margin: auto;border-radius:20%" class="card-img">
+                                <img src="http://127.0.0.1:8000/PlayApp{{ request.user.avatar.url }}" style="display: block;width: 40px;height: 40px;margin: auto;border-radius:20%" class="card-img">
                             {% else%}
                                 <img src="{% static 'PlayApp/assets/img/avatar-default.png' %}" style="display: block;width: 40px;height: 40px;margin: auto; border-radius:20%;" class="card-img">
                             {% endif %}
@@ -41,8 +37,8 @@
                                     ({{request.user.username}})
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                                    <li><a class="dropdown-item" href="#">Tu actividad</a></li>
-                                    <li><a class="dropdown-item" href="{% url 'Usuario Update' %}">Modificar Datos</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'Usuario Actividad' %}">Tu actividad</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'Usuario Update' %}">Modificar datos</a></li>
                                     <li><a class="dropdown-item" href="{% url 'Usuario Logout' %}">Cerrar sesión</a></li>
                                 </ul>
                             </li>
@@ -53,7 +49,6 @@
                 </div>
             </div>
         </nav>
-        <!-- Page Header-->
         <header class="masthead" style="background-image: url('/static/PlayApp/assets/img/home-bg.jpg' )">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -66,18 +61,16 @@
                 </div>
             </div>
         </header>
-        <!-- Main Content-->
        {% block ContenidoTemplate %}
 
        {% endblock %}
-        <!-- Footer-->
         <footer class="border-top">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://twitter.com/NotiBlog_django">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -85,18 +78,10 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.instagram.com/noti.blog.django/">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
@@ -106,9 +91,7 @@
                 </div>
             </div>
         </footer>
-        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
         <script src="{% static 'PlayApp/js/scripts.js' %}"></script>
     </body>
 </html>
