--- a/PlayApp/Templates/PlayApp/T04.3-publicaciones_detalle.html
+++ b/PlayApp/Templates/PlayApp/T04.3-publicaciones_detalle.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block ContenidoTemplate %}
 <body style="text-align:center">
-
+    {% if mensaje %}
+        <h2>{{mensaje}}</h2>
+    {% endif %}
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-5 col-lg-4 col-xl-6"> 
