--- a/PlayApp/Templates/PlayApp/T03.2-usuario_detalle.html
+++ b/PlayApp/Templates/PlayApp/T03.2-usuario_detalle.html
@@ -30,7 +30,7 @@
     </form>
 
     <br>
-    <a class="btn btn-primary btn-lg active" href="{% url 'Avatar Update' %}">Modificar Avatar</a>
+    <a class="btn btn-primary btn-lg active" style="height:60px;width:300px" href="{% url 'Avatar Update' %}">Modificar Avatar</a>
     <br>
     <br>
     <a class="btn btn-lg btn-danger btn-block" style="height:60px;width:300px; text-align: center;" href="{% url 'password_change' %}">Cambiar Contraseña</a>
